style: fix preloader text overflow

--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -20,8 +20,8 @@
 }
 
 .loader-ring {
-    width: 180px;
-    height: 180px;
+    width: 220px;
+    height: 220px;
     border: 3px solid rgba(255, 255, 255, 0.05);
     border-top: 3px solid #A22827;
     border-radius: 50%;
